<resources>
    <string name="app_name">Story App</string>
    <string name="log_in">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account_question">Don\'t Have Account?</string>
    <string name="register_here">Register here</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="creating_account_policy">Creating an account means you\'re okay with our Terms of Service and our Privacy Policy</string>
    <string name="create_account">Create Account</string>
    <string name="settings">Settings</string>
    <string name="add_story">Add Story</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="email_invalid">Email format is invalid</string>
    <string name="password_less_than_6">Password less then 6</string>
    <string name="logout">Logout</string>
    <string name="change_language">Change Language</string>
    <string name="text_uploaded">Uploaded</string>
    <string name="second_ago">second ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="loading">Loading…</string>
    <string name="email_verification">Account Created</string>
    <string name="successfully">Successfully</string>
    <string name="login_failed">Login Failed</string>
    <string name="stories">Stories</string>
    <string name="empty_state_title_no_stories_item">No stories yet</string>
    <string name="you_don_t_have_a_list_of_stories">You don\'t have a list of stories</string>
    <string name="story_pictures">Story Pictures</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="not_getting_permission">Not getting permission</string>
    <string name="choose_a_picture">Choose a picture</string>
    <string name="story_uploaded">Story uploaded</string>
    <string name="select_location">Select Location</string>
    <string name="your_location_optional">Your location (optional)</string>
    <string name="please_select_the_location_area_first">Please select the location area first</string>
    <string name="continue_next">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="UI_validation_maps_area">The location must be selected first. Tap on the desired location to select the location</string>
    <string name="needed_permission">This feature requires the permission</string>
    <string name="const_text_select_location">Select location</string>
    <string name="const_text_tooltip_pin_location">( Click to select location )</string>
    <string name="explore_location">Explore Location</string>
    <string name="location_not_found">Location not found</string>
    <string name="const_text_tooltip_view_story">( Click to see story )</string>
    <string name="UI_validation_permission_location">Give the app access to read your location</string>
    <string name="const_text_location_story">Story Location</string>
    <string name="no_location">No Location</string>
    <string name="const_text_adapter_maps_default">Default View (Country)</string>
    <string name="const_text_adapter_maps_province">Around My Province</string>
    <string name="const_text_adapter_maps_city">Around My City</string>
    <string name="const_text_adapter_maps_district">Around My District</string>
    <string name="const_text_adapter_maps_around">Around My Location</string>
    <string name="const_text_try_again">Try again</string>
</resources>