<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="vertical"
    tools:context=".ui.signup.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginEnd="@dimen/dp_16"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/sp_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/log_in"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_20"
            app:layout_constraintBottom_toBottomOf="@id/text_view_sign_up"
            app:layout_constraintEnd_toEndOf="@id/text_view_sign_up"
            app:layout_constraintTop_toTopOf="@id/text_view_sign_up" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_name"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/text_view_sign_up"
            app:layout_constraintStart_toStartOf="@id/text_view_sign_up"
            app:layout_constraintTop_toBottomOf="@id/text_view_sign_up">

            <com.project.storyapp.customview.EditTextClear
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="@dimen/dp_16"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/sp_16"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_email"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/text_input_name"
            app:layout_constraintStart_toStartOf="@id/text_input_name"
            app:layout_constraintTop_toBottomOf="@id/text_input_name">

            <com.project.storyapp.customview.EditTextEmail
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dp_16"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/sp_16"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/text_input_email"
            app:layout_constraintStart_toStartOf="@id/text_input_email"
            app:layout_constraintTop_toBottomOf="@id/text_input_email">

            <com.project.storyapp.customview.EditTextPassword
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/dp_16"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/sp_16"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_view_creating_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/creating_account_policy"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/text_input_password"
            app:layout_constraintStart_toStartOf="@id/text_input_password"
            app:layout_constraintTop_toBottomOf="@id/text_input_password" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:background="@drawable/bg_btn_pink"
            android:enabled="false"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/create_account"
            android:layout_marginBottom="@dimen/dp_32"
            app:layout_constraintEnd_toEndOf="@id/text_view_creating_account"
            app:layout_constraintStart_toStartOf="@id/text_view_creating_account"
            app:layout_constraintTop_toBottomOf="@id/text_view_creating_account"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>