<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/text_view_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_16"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/sp_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/text_view_login"
        app:layout_constraintStart_toStartOf="@id/text_view_login"
        app:layout_constraintTop_toBottomOf="@id/text_view_login">

        <com.project.storyapp.customview.EditTextEmail
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dp_16"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/sp_16"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/text_input_email"
        app:layout_constraintStart_toStartOf="@id/text_input_email"
        app:layout_constraintTop_toBottomOf="@id/text_input_email">

        <com.project.storyapp.customview.EditTextPassword
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/dp_16"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/sp_16"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@drawable/bg_btn_pink"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/log_in"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@id/text_input_password"
        app:layout_constraintStart_toStartOf="@id/text_input_password"
        app:layout_constraintTop_toBottomOf="@id/text_input_password" />


    <TextView
        android:id="@+id/text_view_no_account_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_question"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/textColorPrimaryDark"
        android:layout_marginBottom="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_register"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/textColorPrimaryDark"
        android:layout_marginBottom="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/dp_4"
        app:layout_constraintStart_toEndOf="@id/text_view_no_account_question"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>