<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="@dimen/dp_0"
        app:title="@string/settings"
        app:titleTextAppearance="@style/TitleToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/textColorPrimary" />
    
    <TextView
        android:id="@+id/tv_change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/change_language"
        android:textColor="@color/textColorPrimaryDark"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:background="@color/grey_2"
        app:layout_constraintTop_toBottomOf="@id/tv_change_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/logout"
        android:textColor="@color/textColorPrimaryDark"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toBottomOf="@id/view1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:background="@color/grey_2"
        app:layout_constraintTop_toBottomOf="@id/tv_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>