<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddStoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="@dimen/dp_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/add_story"
        app:titleTextAppearance="@style/TitleToolbar" />

    <ImageView
        android:id="@+id/img_upload_story"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_marginBottom="@dimen/dp_16"
        android:background="@color/gray"
        android:src="@drawable/ic_camera"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/text_input_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:contentDescription="@string/take_picture" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_description"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_128"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/btn_upload_image"
        app:layout_constraintEnd_toEndOf="@id/img_upload_story"
        app:layout_constraintStart_toStartOf="@id/img_upload_story"
        app:layout_constraintTop_toBottomOf="@id/img_upload_story">

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start"
            android:hint="@string/description"
            android:inputType="none"
            android:padding="@dimen/dp_16"
            android:textAlignment="textStart"
            android:textSize="@dimen/sp_16"
            tools:ignore="Autofill"
            tools:text="Nur Muhammad Syaifuddin Nur Muhammad SyaifuddindddNur Muhammad Syaifuddin Nur Muhammad Syaifuddinddd" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_upload_image"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_pink"
        android:enabled="false"
        android:layout_marginBottom="@dimen/dp_16"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/upload"
        android:layout_marginTop="@dimen/dp_32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/text_input_description"
        app:layout_constraintStart_toStartOf="@id/text_input_description"
        app:layout_constraintTop_toBottomOf="@id/text_input_description" />

</androidx.constraintlayout.widget.ConstraintLayout>